# ehir-llvm-backend

./: .gitignore  .pre-commit-config.yaml  README.md  encore.toml  pyproject.toml
.zed/: settings.json
examples/: .gitignore
examples/example1/: main.ehir
examples/imports/mymathlib/vec/: mod.ehir  vec3d.ehir
examples/imports/refrains/mymathlib/src/: lib.ehir
examples/imports/refrains/mymathlib/src/vec/: vec2d.ehir
examples/imports/src/: main.ehir
src/ehir_llvm_backend/: __init__.py  backend.py  cli.py  codegen.py  target.py
src/ehir_llvm_backend/archiver/: archiver.py
src/ehir_llvm_backend/codegen/: __init__.py  codegen.py
src/ehir_llvm_backend/linker/: linker.py
src/ehir_llvm_backend/optimizer/: __init__.py  level.py  optimizer.py
src/ehir_llvm_target/: __init__.py  cli.py  target.py
src/ehir_llvm_target/assembler/: __init__.py  assembler.py
src/ehir_llvm_target/linker/: __init__.py
src/ehir_llvm_target/optimizer/: optimizer.py
