[project]
name = "ehir-llvm-target"
version = "0.0.0"
description = "LLVM Backend for EHIR"
authors = [
    {name = "Maksim Shushkevich", email = "m.e.shushkevich@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ehir",
    "llvmlite>=0.46.0",
]


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.uv.sources]
ehir = { git = "https://github.com/encore-language/ehir.git", branch = "feature/safe_pointers" }

[project.scripts]
ehir-llvm-target-cli = "ehir_llvm_target.cli:main"


[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
