[project]
name = "ehir-llvm-backend"
version = "0.0.1"
description = "LLVM Backend for EHIR"
authors = [
    {name = "Maksim Shushkevich", email = "m.e.shushkevich@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ehir",
    "llvmlite>=0.46.0",
]


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.uv.sources]
ehir = { git = "https://github.com/encore-language/ehir.git", branch = "feature/modify_builder" }

[project.scripts]
ehir-llvm-backend-cli = "ehir_llvm_backend.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
